--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,4 +1,13 @@
 <!DOCTYPE html>
 <%- include("./partials/header.ejs") %>
-<h2>Main</h2>
+
+<div class="video__main">
+    <% videos.forEach(function (video, index) { %>
+    <video class="video__thumbnail" src="/<%= video.fileUrl %>" , controls=true> </video>
+    <a href=<%= routes.videoDetail(video.id) %>>
+        <h4 class="video__title"><%= video.title %></h4>
+        <h6 class="video__views">Views : <%= video.views %></h6>
+    </a>
+    <% }); %>
+</div>
 <%- include("./partials/footer.ejs") %>
