--- a/views/editVideo.ejs
+++ b/views/editVideo.ejs
@@ -1,4 +1,11 @@
 <!DOCTYPE html>
 <%- include("./partials/header.ejs") %>
-<h2>editVideo</h2>
+<div class="form-container">
+    <form action=<%= routes.editVideo(video.id) %>, method="post">
+        <input type="text" , placeholder="Title" , name="title" , value=<%= video.title %>>
+        <textarea name="description" , placeholder="Description"><%= video.description %></textarea>
+        <input type="submit" , value="Update Video">
+    </form>
+</div>
+
 <%- include("./partials/footer.ejs") %>
