--- a/views/home.ejs
+++ b/views/home.ejs
@@ -8,6 +8,7 @@
         <h4 class="video__title"><%= video.title %></h4>
         <h6 class="video__views">Views : <%= video.views %></h6>
     </a>
+    <a href=<%= routes.deleteVideo(video.id) %> class="video__delete"> Delete Video </a>
     <% }); %>
 </div>
 <%- include("./partials/footer.ejs") %>
