Question Board Create, Update, Delete DONE

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -19,8 +19,8 @@
       <a href=<%= routes.home %> class="banner text-decoration-none"><i class="fas fa-pen-square"></i> HANKOOKSA </a>
     </div>
     <div class="header__column">
-      <form action=<%= routes.search %>, method="get">
-        <input type="text" , placeholder="Search by term" , name="term">
+      <form action=<%= routes.search %> method="get">
+        <input type="text" placeholder="Search by term" name="term">
       </form>
     </div>
     <div class="header__column">
