--- a/views/home.ejs
+++ b/views/home.ejs
@@ -3,7 +3,7 @@
 
 <div class="video__main">
     <% videos.forEach(function (video, index) { %>
-    <video class="video__thumbnail" src="/<%= video.fileUrl %>" , controls=true> </video>
+    <video class="video__thumbnail" src="/<%= video.fileUrl %>" controls=true> </video>
     <a href=<%= routes.videoDetail(video.id) %>>
         <h4 class="video__title"><%= video.title %></h4>
         <h6 class="video__views">Views : <%= video.views %></h6>
