web design change
web design change
join, login, upload, uploadQuestion,home

--- a/views/uploadQues.ejs
+++ b/views/uploadQues.ejs
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <%- include("./partials/header.ejs") %>
-<div class="form-container">
+<div class="container">
     <form action=<%= routes.uploadQuestion(video.id) %> method="post">
+        <label for="label-control">Title</label>
         <input type="text" placeholder="Title" name="title" required=true>
+        <label for="label-control">UserId</label>
         <input type="text" placeholder="userId" name="userId" required=true>
+        <label for="label-control">Description</label>
         <textarea name="description" placeholder="Description"></textarea>
-        <input type="submit" value="Upload Question">
+    </div>
+    <div align="center">
+        <button type="submit" class="btn btn-primary" value="Upload Question">upload</button>
+    </div>
     </form>
-</div>
 <%- include("./partials/footer.ejs") %>
