--- a/views/join.ejs
+++ b/views/join.ejs
@@ -1,4 +1,36 @@
 <!DOCTYPE html>
 <%- include("./partials/header.ejs") %>
 <h2>Join </h2>
+<hr>
+<div class="container">  <!-- container class 가 페이지의 컨텐츠영역을 지정 -->
+    <div class="jumbotron" style="width:500px; margin:auto">
+
+    <div class="bm-login-form" style='width:400px; margin-left:auto; margin-right:auto; border:1px'>
+
+      <div class="starter-template">
+      </div>
+
+     <form name=join onsubmit="return validate()" method=post action="/users/reg">
+       <div class="form-group">
+         <label for="exampleInputEmail1">UserId</label>
+         <input type="email" class="form-control" name="uid" id="uid" aria-describedby="emailHelp" placeholder="이메일주소로 입력하세요">
+       </div>
+       <div class="form-group">
+         <label for="exampleInputPassword1">Password</label>
+         <input type="password" class="form-control" name="pw1" id="pw1" placeholder="암호는 최대20자까지 입력">
+       </div>
+       <div class="form-group">
+         <label for="exampleInputPassword2">Password one more</label>
+         <input type="password" class="form-control" name="pw2" id="pw2" placeholder="암호를 한번더 입력해주세요">
+       </div>
+       <div class="form-group">
+         <label for="exampleInputEmail1">UserName</label>
+         <input type="text" class="form-control" name="uname" id="uname" placeholder="이름을 입력하세요">
+       </div>
+         <hr>
+         <button type="submit" class="btn btn-primary">Join</button>
+      </form>
+     </div>
+     </div>
+    </div><!-- /.container -->
 <%- include("./partials/footer.ejs") %>
