--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -5,47 +5,107 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <title><%= pageTitle %> | <%= siteName %></title>
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.1/css/all.css"
-    integrity="sha384-xxzQGERXS00kBmZW/6qxqJPyxW3UR0BPsL4c8ILaIWXva5kFi7TxkIIaMiKtqV1Q" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+     integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-    crossorigin="anonymous"></script>
+     <link rel="stylesheet" href="/stylesheet/style.css">
+
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" 
+    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" 
+integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" 
+integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
 </head>
 
 <body>
   <header class="header">
-    <div class="header__column">
-      <a href=<%= routes.home %> class="banner text-decoration-none"><i class="fas fa-pen-square"></i> HANKOOKSA </a>
-    </div>
-    <div class="header__column">
-      <form action=<%= routes.search %> method="get">
-        <input type="text" placeholder="Search by term" name="term">
-      </form>
-    </div>
-    <div class="header__column">
-      <ul>
-        <% if (!user.isAuthenticated) {%>
-        <li>
-          <a href=<%= routes.join %>> Join </a>
-        </li>
-        <li>
-          <a href=<%= routes.login %>> Log In </a>
-        </li>
-        <%} else {%>
-        <li>
-          <a href="/videos<%= routes.upload %>"> Upload </a>
-        </li>
-        <li>
-          <a href=<%= routes.userDetail(user.id) %>> Profile </a>
-        </li>
-        <li>
-          <a href=<%= routes.logout %>> Log Out </a>
-        </li>
-        <%} %>
-      </ul>
-    </div>
+    <nav class="navbar navbar-default" role="navigation">
+      <!-- Brand and toggle get grouped for better mobile display -->
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse-1">
+          <span class="sr-only"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        &nbsp;
+        <div class="btn-group">    
+          <a href=<%=routes.home %> class="btn btn-default navbar-btn dropdown-toggle" ><i class="glyphicon glyphicon-chevron-down"></i> <span class="hidden-xs"> HANKOOKSA </span></a>
+        </div>  
+      </div>
+      <!-- Collect the nav links, forms, and other content for toggling -->
+      <div class="collapse navbar-collapse" id="navbar-collapse-1">
+       
+        <form action=<%=routes.search %> method="get" class="navbar-form navbar-left" role="search">
+          <div class="form-group">
+            <input type="text" class="form-control" placeholder="Search">
+          </div>
+        </form>
+          </li>
+        </ul>
+      </div><!-- /.navbar-collapse -->
+  </nav>
+  
+
   </header>
+  <div class="wrapper">
+   
+    <!-- Sidebar  -->
+    <nav id="sidebar">
+        <div class="sidebar-header">
+            <h3>본몬</h3>
+  <!-- --video 인증 안됨 -->
+
+        </div>
+    </nav>
+
+ <div id="content">
+  <div class="header__column">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        
+      <div class="container-fluid">
+
+            <button type="button" id="sidebarCollapse" class="btn btn-info">
+                <i class="fas fa-align-left"></i>
+                <span>sidebar</span>
+            </button>
+            <button class="btn btn-dark d-inline-block d-lg-none ml-auto" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <i class="fas fa-align-justify"></i>
+            </button>
+
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="nav navbar-nav ml-auto">
+                  <% if (!user.isAuthenticated) {%>
+                    <li class="nav-item active">
+                      <a  class="nav-link" href=<%= routes.join %>> Join </a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href=<%= routes.login %>> Log In </a>
+                    </li>
+                    <%} else {%>
+                    <li class="nav-item">
+                      <a class="nav-link" href="/videos<%= routes.upload %>"> Upload </a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href=<%= routes.userDetail(user.id) %>> Profile </a>
+                    </li>
+                    <li>
+                      <a class="nav-link" href=<%= routes.logout %>> Log Out </a>
+                    </li>
+                    <%} %>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    </div>
 </body>
+<script type="text/javascript">
+  $(document).ready(function () {
+      $('#sidebarCollapse').on('click', function () {
+          $('#sidebar').toggleClass('active');
+      });
+  });
+</script>
 
 </html>
