--- a/views/upload.ejs
+++ b/views/upload.ejs
@@ -1,12 +1,24 @@
 <!DOCTYPE html>
 <%- include("./partials/header.ejs") %>
-<div class="form-container">
+<body>
+<div class="container">
     <form action="/videos<%= routes.upload %>" method="post" enctype="multipart/form-data">
-        <label for="file">Video File</label>
-        <input type="file" id="file" name="videoFile" required=ture accept="video/*">
-        <input type="text" placeholder="Title" name="title" required=true>
-        <textarea name="description" placeholder="Description"></textarea>
-        <input type="submit" value="Upload Video">
+        <div class="form-group">
+        <label for="title" class="control-label">Title</label>
+        <input type="text" class="form-control" placeholder="Title" id="title" required=true>
+        </div>
+        <div class="form-group">
+        <textarea name="description" placeholder="Description"></textarea></div>
+        <div class="input-group">
+                <div class="input-group-prepend">
+                  <span class="input-group-text" id="inputGroupFileAddon01">Upload</span>
+                </div>
+       <input type="file" id="file" name="videoFile" required=ture accept="video/*">
+        </div>
+    </div>
+    <div align="center">
+        <button type="submit" class="btn btn-primary " value="Upload Video">upload</button>
+        </div>
     </form>
-</div>
 <%- include("./partials/footer.ejs") %>
+</body>
