join function complete
join function -db, js

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -2,7 +2,7 @@
 <%- include("./partials/header.ejs") %>
 <h2>Login</h2>
 
-<form action="/action_page.php" method="post">
+<form action=<%= routes.login %> method="post">
   
 
   <div class="container-login">
@@ -11,16 +11,9 @@
 
     <label for="psw"><b>Password</b></label>
     <input type="password" placeholder="Enter Password" name="psw" required>
-        
-    <button type="submit">Login</button>
-    <label>
-      <input type="checkbox" checked="checked" name="remember"> Remember me
-    </label>
-  </div>
-
-  <div class="container" style="background-color:#f1f1f1">
-    <button type="button" class="cancelbtn">Cancel</button>
-    <span class="psw">Forgot <a href="#">password?</a></span>
-  </div>
+     <div align="center">   
+    <button class="btn btn-primary" type="submit">Login</button>
+    </div>
+    </div>
 </form>
 <%- include("./partials/footer.ejs") %>
