--- a/views/join.ejs
+++ b/views/join.ejs
@@ -10,22 +10,22 @@
       <div class="starter-template">
       </div>
 
-     <form name=join onsubmit="return validate()" method=post action="/users/reg">
+     <form name=join onsubmit="return validate()" method=post action=<%= routes.join %>>
        <div class="form-group">
          <label for="exampleInputEmail1">UserId</label>
-         <input type="email" class="form-control" name="uid" id="uid" aria-describedby="emailHelp" placeholder="이메일주소로 입력하세요">
+         <input type="email" class="form-control" name="email" id="email" aria-describedby="emailHelp" placeholder="이메일주소로 입력하세요">
        </div>
        <div class="form-group">
          <label for="exampleInputPassword1">Password</label>
-         <input type="password" class="form-control" name="pw1" id="pw1" placeholder="암호는 최대20자까지 입력">
+         <input type="password" class="form-control" name="password" id="password" placeholder="암호는 최대20자까지 입력">
        </div>
        <div class="form-group">
          <label for="exampleInputPassword2">Password one more</label>
-         <input type="password" class="form-control" name="pw2" id="pw2" placeholder="암호를 한번더 입력해주세요">
+         <input type="password" class="form-control" name="password2" id="password2" placeholder="암호를 한번더 입력해주세요">
        </div>
        <div class="form-group">
          <label for="exampleInputEmail1">UserName</label>
-         <input type="text" class="form-control" name="uname" id="uname" placeholder="이름을 입력하세요">
+         <input type="text" class="form-control" name="name" id="name" placeholder="이름을 입력하세요">
        </div>
          <hr>
          <button type="submit" class="btn btn-primary">Join</button>
