--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -76,7 +76,7 @@ integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0J
 
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="nav navbar-nav ml-auto">
-                  <% if (!user.isAuthenticated) {%>
+                  <% if (user.isAuthenticated) {%>
                     <li class="nav-item active">
                       <a  class="nav-link" href=<%= routes.join %>> Join </a>
                     </li>
