--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -5,17 +5,20 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <title><%= pageTitle %> | <%= siteName %></title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
-     integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+    integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 
-     <link rel="stylesheet" href="/stylesheet/style.css">
+  <link rel="stylesheet" href="/stylesheet/style.css">
 
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" 
-    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" 
-integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" 
-integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+    integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
+    crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -30,81 +33,87 @@ integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0J
           <span class="icon-bar"></span>
         </button>
         &nbsp;
-        <div class="btn-group">    
-          <a href=<%=routes.home %> class="btn btn-default navbar-btn dropdown-toggle" ><i class="glyphicon glyphicon-chevron-down"></i> <span class="hidden-xs"> HANKOOKSA </span></a>
-        </div>  
+        <div class="btn-group">
+          <a href=<%=routes.home %> class="btn btn-default navbar-btn dropdown-toggle"><i
+              class="glyphicon glyphicon-chevron-down"></i> <span class="hidden-xs"> HANKOOKSA </span></a>
+        </div>
       </div>
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="navbar-collapse-1">
-       
+
         <form action=<%=routes.search %> method="get" class="navbar-form navbar-left" role="search">
           <div class="form-group">
             <input type="text" class="form-control" placeholder="Search">
           </div>
         </form>
-          </li>
+        </li>
         </ul>
       </div><!-- /.navbar-collapse -->
-  </nav>
-  
+    </nav>
+
 
   </header>
   <div class="wrapper">
-   
+
     <!-- Sidebar  -->
     <nav id="sidebar">
-        <div class="sidebar-header">
-            <h3>본몬</h3>
-  <!-- --video 인증 안됨 -->
+      <div class="sidebar-header">
+        <h3>본몬</h3>
+        <!-- --video 인증 안됨 -->
 
-        </div>
+      </div>
     </nav>
 
- <div id="content">
-  <div class="header__column">
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        
-      <div class="container-fluid">
+    <div id="content">
+      <div class="header__column">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+
+          <div class="container-fluid">
 
             <button type="button" id="sidebarCollapse" class="btn btn-info">
-                <i class="fas fa-align-left"></i>
-                <span>sidebar</span>
+              <i class="fas fa-align-left"></i>
+              <span>sidebar</span>
             </button>
-            <button class="btn btn-dark d-inline-block d-lg-none ml-auto" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <i class="fas fa-align-justify"></i>
+            <button class="btn btn-dark d-inline-block d-lg-none ml-auto" type="button" data-toggle="collapse"
+              data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+              aria-label="Toggle navigation">
+              <i class="fas fa-align-justify"></i>
             </button>
 
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="nav navbar-nav ml-auto">
-                  <% if (!user.isAuthenticated) {%>
-                    <li class="nav-item active">
-                      <a  class="nav-link" href=<%= routes.join %>> Join </a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href=<%= routes.login %>> Log In </a>
-                    </li>
-                    <%} else {%>
-                    <li class="nav-item">
-                      <a class="nav-link" href="/videos<%= routes.upload %>"> Upload </a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href=<%= routes.userDetail(user.id) %>> Profile </a>
-                    </li>
-                    <li>
-                      <a class="nav-link" href=<%= routes.logout %>> Log Out </a>
-                    </li>
-                    <%} %>
-                </ul>
+              <ul class="nav navbar-nav ml-auto">
+                <% if (!user.isAuthenticated) {%>
+                <li class="nav-item active">
+                  <a class="nav-link" href=<%= routes.join %>> Join </a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href=<%= routes.login %>> Log In </a>
+                </li>
+                <%} else {%>
+                <li class="nav-item">
+                  <a class="nav-link" href="/quiz<%= routes.uploadQuiz %>"> Quiz Upload </a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="/videos<%= routes.upload %>"> Video Upload </a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href=<%= routes.userDetail(user.id) %>> Profile </a>
+                </li>
+                <li>
+                  <a class="nav-link" href=<%= routes.logout %>> Log Out </a>
+                </li>
+                <%} %>
+              </ul>
             </div>
-        </div>
-    </nav>
-    </div>
+          </div>
+        </nav>
+      </div>
 </body>
 <script type="text/javascript">
   $(document).ready(function () {
-      $('#sidebarCollapse').on('click', function () {
-          $('#sidebar').toggleClass('active');
-      });
+    $('#sidebarCollapse').on('click', function () {
+      $('#sidebar').toggleClass('active');
+    });
   });
 </script>
 
