--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -11,7 +11,9 @@ p {
     line-height: 1.7em;
     color: #999;
 }
-
+div{
+    margin: 10px;
+}
 a,
 a:hover,
 a:focus {
@@ -232,4 +234,10 @@ span.psw {
      display: block;
      float: none;
   }
+}
+
+
+.video__player{
+    margin-top: 100px;
+    
 }
