--- a/views/getQues.ejs
+++ b/views/getQues.ejs
@@ -2,10 +2,12 @@
 <%- include("./partials/header.ejs") %>
 <div class="question__title">
     <h2>Question : <%= question.title %></h2>
-    <span>Name : <%= question.userId %> ,</span>
-    <span>CreateAt : <%= question.createdAt %></span>
+    
+    <div><h5>Name : <%= question.userId %> </h5></div>
+    <div align="right"><span>Date : <%= question.createdAt %></span></div>
+    <div align="right">
     <a href=<%= routes.editQuestion(question.id) %>> Edit Question </a>
-    <a href=<%= routes.deleteQuestion(question.id) %>> Delete Question </a>
+    <a href=<%= routes.deleteQuestion(question.id) %>> Delete Question </a></div>
 </div>
 
 <hr>
@@ -13,13 +15,13 @@
     <span><%= question.description %></span>
 </div>
 
-<div class="form-container">
+<div class="container">
     <form action=<%= routes.uploadComment(question.id) %> method="post">
         <!-- TODO: User Parsing-->
         <img src="#" alt="Avater" width="100px" height="100px">
         <span>Login user</span>
         <input type="text" placeholder="comment here" name="comment" required=true>
-        <input type="submit" value="Upload comment">
+        <div align="center"><input type="submit" class="btn btn-primary" value="Upload comment"></div>
     </form>
 </div>
 <hr>
@@ -28,9 +30,10 @@
 <img src="#" alt="Avater" width="100px" height="100px">
 <!-- TODO: User Parsing-->
 <span>Login user</span>
-<span><%= comment.comment %></span>
-<span><%= comment.createdAt %></span>
-<a href=<%= routes.deleteComment(comment.id) %> class="comment__delete"> Delete Comment </a>
+<div><h5><%= comment.comment %></h5></div>
+<div align="right"><span><%= comment.createdAt %></span></div>
+<div align="right">
+<a href=<%= routes.deleteComment(comment.id) %> class="comment__delete"> Delete Comment </a></div>
 <hr>
 <% }); %>
 
