--- a/views/videoDetail.ejs
+++ b/views/videoDetail.ejs
@@ -1,37 +1,54 @@
 <!DOCTYPE html>
 <%- include("./partials/header.ejs") %>
-<div class="video__player">
+<h5 class="video__title"><%= video.title %></h5>
+<div align="center" class="video__player">
     <video src="/<%= video.fileUrl %>" , controls=true></video>
 </div>
-<div class="video__info">
-    <a href=<%= routes.editVideo(video.id) %>> Edit Video</a>
-    <h5 class="video__title"><%= video.title %></h5>
+<div align="right" class="video__info">
+    <div><a href=<%= routes.editVideo(video.id) %>> Edit Video</a></div>
     <span class="video__views">views : <%= video.views %></span>
+</div>
     <div class="video__detailBox">
-        <h1 class="video__note" style="color:blue;">강의노트</h1>
-        <h1 class="video__question">질문</h1>
+        <a class="btn btn-outline-secondary video__note">강의노트</a>
+        <a class="btn btn-outline-secondary video__question">질문</a>
+        <hr>
         <p class="video__description"><%= video.description %></p>
         <div class="video__questions" style="display:none;">
-            <div class="posts__upload">
-                <a href=<%= routes.uploadQuestion(video.id) %>> 질문하기 </a>
-            </div>
             <div class="posts">
+                <table class="table table-hover">
+                    <thead>
+                        <tr>
+                            <th>번호</th>
+                            <th>제목</th>
+                            <th>작성자</th>
+                            <th>조회수</th>
+                            <th>날짜</th>
+                        </tr>
+                    </thead>
+                    <tbody>
                 <% questions.forEach(function (question, index) { %>
-                <div class="post">
-                    <a href=<%= routes.questionDetail(question.id) %>>
-                        <span class="post__id"><%= question.id %></span>
-                        <span class="post__title"><%= question.title %></span>
-                        <span class="post__userId"><%= question.userId %></span>
-                        <span class="post__views"><%= question.views %></span>
-                        <span class="post__date"><%= question.createdAt %></span>
-                    </a>
-                </div>
+                    <tr onClick="location.href='<%= routes.questionDetail(question.id) %>'" style="cursor:pointer;">
+            
+                        <td><span class="post__id"><%= question.id %></span></td></a>
+                        <td>
+                        <span class="post__title"><%= question.title %></span></td>
+                        <td>
+                        <span class="post__userId"><%= question.userId %></span></td>
+                        <td>
+                        <span class="post__views"><%= question.views %></span></td>
+                        <td>
+                        <span class="post__date"><%= question.createdAt %></span></td>
+                </tr>
+        </div>
                 <% }); %>
+                    </tbody>
+                </table>
             </div>
+            <div align="right">
+            <a  href=<%= routes.uploadQuestion(video.id) %> class="btn btn-default pull right">질문하기</a></div>
 
         </div>
     </div>
-</div>
 <script>
     const note = document.querySelector(".video__note");
     const question = document.querySelector(".video__question");
