--- a/views/home.ejs
+++ b/views/home.ejs
@@ -6,10 +6,10 @@
         <video class="video__thumbnail" style="width:1000px;" src="/<%= video.fileUrl %>" controls=true>
         </video>
         <a href=<%= routes.videoDetail(video.id) %>>
-            <h4 class="video__title"><%= video.title %></h4>
-            <h6 class="video__views">Views : <%= video.views %></h6>
+            <div><h5 class="video__title"><%= video.title %></h5></div>
+            <div align="right"><h6 class="video__views">Views : <%= video.views %></h6>
         </a>
-        <a href=<%= routes.deleteVideo(video.id) %> class="video__delete"> Delete Video </a>
+        <a href=<%= routes.deleteVideo(video.id) %> class="video__delete"> Delete Video </a></div>
         <hr>
     </div>
     <% }); %>
@@ -26,7 +26,7 @@
     </div>
     <% }); %>
 
-    <button type="button" class="quiz__submit btn btn-danger mt-5">Submit</button>
+    <div align="center"><button type="button" class="quiz__submit btn btn-danger mt-5">Submit</button></div>
 </div>
 
 <script>
@@ -35,40 +35,29 @@
     const quizSubmit = document.querySelector(".quiz__submit");
     let answerCount = 0;
     let selectCount = 0;
-
     for (let i = 0; i < quizQuestion.length; i++) {
         quizQuestion[i].addEventListener("click", function (e) {
             const correctAnswer = e.target.parentNode.querySelector(".quiz__answer").textContent;
             const selectAnswer = e.target.value;
-
             if (correctAnswer === selectAnswer) {
-
                 quizQuestion[i].classList.remove("btn-info");
                 quizQuestion[i].classList.add("btn-primary");
                 answerCount++;
                 selectCount++;
-
                 alert("정답입니다.");
-
             } else {
-
                 quizQuestion[i].classList.remove("btn-info");
                 quizQuestion[i].classList.add("btn-danger");
                 selectCount++;
-
                 alert("오답입니다.");
-
             }
-
             const selectQuizParent = e.target.parentNode;
             for (let i = 0; i < selectQuizParent.childNodes.length; i++) {
                 if (selectQuizParent.childNodes[i].className == "quiz__question btn btn-info")
                     selectQuizParent.childNodes[i].disabled = true;
             }
-
         })
     }
-
     quizSubmit.addEventListener("click", function () {
         if (selectCount == quizContainer.length) {
             const emoji = () => {
@@ -82,6 +71,5 @@
             alert("문제를 모두 풀지 않았습니다.");
         }
     })
-
 </script>
 <%- include("./partials/footer.ejs") %>
