--- a/views/home copy.ejs
+++ b/views/home copy.ejs
@@ -1,4 +1,80 @@
 <!DOCTYPE html>
 <%- include("./partials/header.ejs") %>
-<h2>Main</h2>
+<div class="video__main">
+    <% videos.forEach(function (video, index) { %>
+    <div class="container mt-5">
+        <video class="video__thumbnail" style="width:1000px;" src="/<%= video.fileUrl %>" controls=true>
+        </video>
+        <a href=<%= routes.videoDetail(video.id) %>>
+            <div>
+                <h5 class="video__title"><%= video.title %></h5>
+            </div>
+            <div align="right">
+                <h6 class="video__views">Views : <%= video.views %></h6>
+        </a>
+        <a href=<%= routes.deleteVideo(video.id) %> class="video__delete"> Delete Video </a></div>
+    <hr>
+</div>
+<% }); %>
+<% quizs.forEach(function (quiz, index) { %>
+<div class="quiz__container container mt-5">
+    <a href=<%= routes.editQuiz(quiz.id) %>> Edit Quiz </a>
+    <a href=<%= routes.deleteQuiz(quiz.id) %>> Delete Quiz </a>
+    <h2 class="quiz__title"><%= quiz.question %></h2>
+    <option class="quiz__question btn btn-info" value="1">1. <%= quiz.answerOne %></option>
+    <option class="quiz__question btn btn-info" value="2">2. <%= quiz.answerTwo %></option>
+    <option class="quiz__question btn btn-info" value="3">3. <%= quiz.answerThree %></option>
+    <option class="quiz__question btn btn-info" value="4">4. <%= quiz.answerFour %></option>
+    <div class="quiz__answer" style="display:none"><%= quiz.answerCheck %></div>
+</div>
+<% }); %>
+
+<div align="center"><button type="button" class="quiz__submit btn btn-danger mt-5">Submit</button></div>
+</div>
+
+<script>
+    const quizContainer = document.querySelectorAll(".quiz__container");
+    const quizQuestion = document.querySelectorAll(".quiz__question");
+    const quizSubmit = document.querySelector(".quiz__submit");
+    let answerCount = 0;
+    let selectCount = 0;
+    for (let i = 0; i < quizQuestion.length; i++) {
+        quizQuestion[i].addEventListener("click", function (e) {
+            const correctAnswer = e.target.parentNode.querySelector(".quiz__answer").textContent;
+            const selectAnswer = e.target.value;
+            if (correctAnswer === selectAnswer) {
+                quizQuestion[i].classList.remove("btn-info");
+                quizQuestion[i].classList.add("btn-primary");
+                answerCount++;
+                selectCount++;
+                quizQuestion[i].disabled = true;
+                alert("정답입니다.");
+            } else {
+                quizQuestion[i].classList.remove("btn-info");
+                quizQuestion[i].classList.add("btn-danger");
+                selectCount++;
+                quizQuestion[i].disabled = true;
+                alert("오답입니다.");
+            }
+            const selectQuizParent = e.target.parentNode;
+            for (let i = 0; i < selectQuizParent.childNodes.length; i++) {
+                if (selectQuizParent.childNodes[i].className == "quiz__question btn btn-info")
+                    selectQuizParent.childNodes[i].disabled = true;
+            }
+        })
+    }
+    quizSubmit.addEventListener("click", function () {
+        if (selectCount == quizContainer.length) {
+            const emoji = () => {
+                if ((answerCount / quizContainer.length * 100) < 50)
+                    return "😥";
+                else
+                    return "😀";
+            }
+            alert(`${emoji()} 총 ${quizContainer.length} 문제 중 ${answerCount} 문제를 맞추었습니다.`);
+        } else {
+            alert("문제를 모두 풀지 않았습니다.");
+        }
+    })
+</script>
 <%- include("./partials/footer.ejs") %>
