--- a/views/upload.ejs
+++ b/views/upload.ejs
@@ -9,8 +9,13 @@
                 <input type="text" class="form-control" placeholder="Title" id="title" name="title" required=true>
             </div>
             <div class="form-group">
-                <textarea name="description" placeholder="Description"></textarea></div>
+                <textarea name="description" placeholder="Description"></textarea>
+            </div>
+            <div class="form-group">
+                <textarea name="note" placeholder="Note"></textarea>
+            </div>
             <div class="input-group">
+
                 <div class="input-group-prepend">
                     <span class="input-group-text" id="inputGroupFileAddon01">Upload</span>
                 </div>
