--- a/views/videoDetail.ejs
+++ b/views/videoDetail.ejs
@@ -8,47 +8,47 @@
     <div><a href=<%= routes.editVideo(video.id) %>> Edit Video</a></div>
     <span class="video__views">views : <%= video.views %></span>
 </div>
-    <div class="video__detailBox">
-        <a class="btn btn-outline-secondary video__note">강의노트</a>
-        <a class="btn btn-outline-secondary video__question">질문</a>
-        <hr>
-        <p class="video__description"><%= video.description %></p>
-        <div class="video__questions" style="display:none;">
-            <div class="posts">
-                <table class="table table-hover">
-                    <thead>
-                        <tr>
-                            <th>번호</th>
-                            <th>제목</th>
-                            <th>작성자</th>
-                            <th>조회수</th>
-                            <th>날짜</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                <% questions.forEach(function (question, index) { %>
+<div class="video__detailBox">
+    <a class="btn btn-primary text-white video__note">강의노트</a>
+    <a class="btn btn-secondary text-white video__question">질문</a>
+    <hr>
+    <p class="video__description"><%= video.note %></p>
+    <div class="video__questions" style="display:none;">
+        <div class="posts">
+            <table class="table table-hover">
+                <thead>
+                    <tr>
+                        <th>번호</th>
+                        <th>제목</th>
+                        <th>작성자</th>
+                        <th>조회수</th>
+                        <th>날짜</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <% questions.forEach(function (question, index) { %>
                     <tr onClick="location.href='<%= routes.questionDetail(question.id) %>'" style="cursor:pointer;">
-            
+
                         <td><span class="post__id"><%= question.id %></span></td></a>
                         <td>
-                        <span class="post__title"><%= question.title %></span></td>
+                            <span class="post__title"><%= question.title %></span></td>
                         <td>
-                        <span class="post__userId"><%= question.userId %></span></td>
+                            <span class="post__userId"><%= question.userId %></span></td>
                         <td>
-                        <span class="post__views"><%= question.views %></span></td>
+                            <span class="post__views"><%= question.views %></span></td>
                         <td>
-                        <span class="post__date"><%= question.createdAt %></span></td>
-                </tr>
+                            <span class="post__date"><%= question.createdAt %></span></td>
+                    </tr>
         </div>
-                <% }); %>
-                    </tbody>
-                </table>
-            </div>
-            <div align="right">
-            <a  href=<%= routes.uploadQuestion(video.id) %> class="btn btn-default pull right">질문하기</a></div>
-
-        </div>
+        <% }); %>
+        </tbody>
+        </table>
     </div>
+    <div align="right">
+        <a href=<%= routes.uploadQuestion(video.id) %> class="btn btn-default pull right">질문하기</a></div>
+
+</div>
+</div>
 <script>
     const note = document.querySelector(".video__note");
     const question = document.querySelector(".video__question");
@@ -56,14 +56,20 @@
     const questions = document.querySelector(".video__questions");
 
     const handleNoteClick = () => {
-        note.style.color = "blue";
-        question.style.color = "black";
+        note.classList.add("btn-primary");
+        note.classList.remove("btn-secondary");
+        question.classList.add("btn-secondary");
+        question.classList.remove("btn-primary");
+
         questions.style.display = "none";
         description.style.display = "block";
     }
     const handleQuestionClick = () => {
-        question.style.color = "blue";
-        note.style.color = "black";
+        question.classList.add("btn-primary");
+        question.classList.remove("btn-secondary");
+        note.classList.add("btn-secondary");
+        note.classList.remove("btn-primary");
+
         description.style.display = "none";
         questions.style.display = "block";
     }
