--- a/views/login.ejs
+++ b/views/login.ejs
@@ -3,17 +3,17 @@
 <h2>Login</h2>
 
 <form action=<%= routes.login %> method="post">
-  
+
 
   <div class="container-login">
-    <label for="uname"><b>Username</b></label>
-    <input type="text" placeholder="Enter Username" name="uname" required>
+    <label for="email"><b>Username</b></label>
+    <input type="text" placeholder="Enter Username" name="email" required>
 
-    <label for="psw"><b>Password</b></label>
-    <input type="password" placeholder="Enter Password" name="psw" required>
-     <div align="center">   
-    <button class="btn btn-primary" type="submit">Login</button>
+    <label for="password"><b>Password</b></label>
+    <input type="password" placeholder="Enter Password" name="password" required>
+    <div align="center">
+      <button class="btn btn-primary" type="submit">Login</button>
     </div>
-    </div>
+  </div>
 </form>
 <%- include("./partials/footer.ejs") %>
