--- a/views/uploadQues.ejs
+++ b/views/uploadQues.ejs
@@ -1,16 +1,23 @@
 <!DOCTYPE html>
 <%- include("./partials/header.ejs") %>
 <div class="container">
+    <table class="table table-hover">
     <form action=<%= routes.uploadQuestion(video.id) %> method="post">
-        <label for="label-control">Title</label>
-        <input type="text" placeholder="Title" name="title" required=true>
-        <label for="label-control">UserId</label>
-        <input type="text" placeholder="userId" name="userId" required=true>
-        <label for="label-control">Description</label>
-        <textarea name="description" placeholder="Description"></textarea>
-    </div>
+       <tr>
+           <td>Title</td>
+           <td><input type="text" placeholder="Title" name="title" required=true></td>
+        </tr>
+        <tr>
+            <td>UserId</td>
+        <td><input type="text" placeholder="userId" name="userId" required=true></td>
+        </tr>
+        <tr>
+        <td>Description</td>
+      <td><textarea name="description" placeholder="Description"></textarea></td>
+    </tr>
+</table>
+</div>
     <div align="center">
-        <button type="submit" class="btn btn-primary" value="Upload Question">upload</button>
-    </div>
+        <button type="submit" class="btn btn-primary" value="Upload Question">upload</button></div>
     </form>
 <%- include("./partials/footer.ejs") %>
