--- a/views/upload.ejs
+++ b/views/upload.ejs
@@ -3,25 +3,22 @@
 
 <body>
     <div class="container">
+        <table class="table table-hover">
         <form action="/videos<%= routes.upload %>" method="post" enctype="multipart/form-data">
-            <div class="form-group">
-                <label for="title" class="control-label">Title</label>
-                <input type="text" class="form-control" placeholder="Title" id="title" name="title" required=true>
-            </div>
-            <div class="form-group">
-                <textarea name="description" placeholder="Description"></textarea>
-            </div>
-            <div class="form-group">
-                <textarea name="note" placeholder="Note"></textarea>
-            </div>
-            <div class="input-group">
-
-                <div class="input-group-prepend">
-                    <span class="input-group-text" id="inputGroupFileAddon01">Upload</span>
-                </div>
-                <input type="file" id="file" name="videoFile" required=ture accept="video/*">
-            </div>
-    </div>
+           <tr>
+            <td>Ttile</td>
+              <td>  <input type="text" class="form-control" placeholder="Title" id="title" name="title" required=true></td>
+              </tr>
+              <tr>
+           <td>Note</td>
+            <td><textarea name="note" placeholder="note"></textarea></td>
+            </tr>
+               <tr>
+                <td>Upload</td>
+               <td> <input type="file"  id="file" name="videoFile" required=ture accept="video/*"></td>
+               </tr>
+            </table>
+        </div>
     <div align="center">
         <button type="submit" class="btn btn-primary " value="Upload Video">upload</button>
     </div>
