--- a/views/editVideo.ejs
+++ b/views/editVideo.ejs
@@ -1,11 +1,22 @@
 <!DOCTYPE html>
 <%- include("./partials/header.ejs") %>
-<div class="container">
+<div align="center">
+<div class="form-container">
+    <table class="table table-hover">
     <form action=<%= routes.editVideo(video.id) %> method="post">
-        <input type="text" laceholder="Title" name="title" value=<%= video.title %>>
-        <textarea name="description" placeholder="Description"><%= video.description %></textarea>
+        <tr>
+            <td>Ttile</td>
+        <td><input type="text" laceholder="Title" name="title" value=<%= video.title %>></td>
+        </tr>
+        <tr>
+        <td>Note</td>
+        <td><textarea name="description" placeholder="Description"><%= video.description %></textarea></td>
+        </tr>
+    </div>
+    </div>
+</table>
         <div align="center"><input class="btn btn-primary" type="submit" value="Update Video"></div>
     </form>
-</div>
+
 
 <%- include("./partials/footer.ejs") %>
