--- a/views/getQues.ejs
+++ b/views/getQues.ejs
@@ -15,7 +15,7 @@
     <span><%= question.description %></span>
 </div>
 
-<div class="container">
+<div class="form-container">
     <form action=<%= routes.uploadComment(question.id) %> method="post">
         <!-- TODO: User Parsing-->
         <img src="#" alt="Avater" width="100px" height="100px">
