--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -150,6 +150,11 @@ a.article:hover {
     transition: all 0.3s;
 }
 
+div .form-container{
+    width:50%;
+    border: 3px ;
+    }
+
 /* ---------------------------------------------------
     MEDIAQUERIES
 ----------------------------------------------------- */
@@ -179,16 +184,17 @@ input[type=text], select, textarea {
     margin-bottom: 16px;
     resize: vertical;
   }
-  .container {
-    border-radius: 5px;
-    background-color: #f2f2f2;
-    padding: 20px;
+  div.container {
+    
+        
+        background-color: #f2f2f2;
+        padding: 20px;
   }
  
 
   form {border: 3px solid #f1f1f1;}
 
-input[type=text], input[type=password] {
+input [type=text], input[type=password] {
   width: 100%;
   padding: 12px 20px;
   margin: 8px 0;
@@ -203,11 +209,7 @@ button:hover {
   opacity: 0.8;
 }
 
-.cancelbtn {
-  width: auto;
-  padding: 10px 18px;
-  background-color: #f44336;
-}
+
 
 .imgcontainer {
   text-align: center;
@@ -237,8 +239,3 @@ span.psw {
 
 }
 
-
-.video__player{
-    margin-top: 100px;
-    
-}
