--- a/views/upload.ejs
+++ b/views/upload.ejs
@@ -2,7 +2,8 @@
 <%- include("./partials/header.ejs") %>
 
 <body>
-    <div class="container">
+    <div align="center">
+    <div class="form-container">
         <table class="table table-hover">
         <form action="/videos<%= routes.upload %>" method="post" enctype="multipart/form-data">
            <tr>
@@ -19,6 +20,7 @@
                </tr>
             </table>
         </div>
+    </div>
     <div align="center">
         <button type="submit" class="btn btn-primary " value="Upload Video">upload</button>
     </div>
