--- a/views/uploadQuiz.ejs
+++ b/views/uploadQuiz.ejs
@@ -2,7 +2,8 @@
 <%- include("./partials/header.ejs") %>
 
 <body>
-    <div class="container">
+    <div align="center">
+    <div class="form-container" align="center">
         <form action="/quiz<%= routes.uploadQuiz %>" method="post">
             <div class="form-group">
                 <label for="title" class="control-label">Quiz Title</label>
@@ -43,10 +44,12 @@
                     <input type="radio" id="answerCheckFour" name="answerCheck" value="4">Quiz 4
                 </label>
             </div>
+        </div>
+    </div>
             <div align="center">
                 <button type="submit" class="btn btn-primary " value="Upload Quiz">upload</button>
             </div>
         </form>
-    </div>
+
     <%- include("./partials/footer.ejs") %>
 </body>
