--- a/views/upload.ejs
+++ b/views/upload.ejs
@@ -12,7 +12,7 @@
                 <textarea name="description" placeholder="Description"></textarea>
             </div>
             <div class="form-group">
-                <textarea name="note" placeholder="Note"></textarea>
+                <textarea name="note" placeholder="Note" rows="20"></textarea>
             </div>
             <div class="input-group">
 
