--- a/views/videoDetail.ejs
+++ b/views/videoDetail.ejs
@@ -38,7 +38,7 @@
                             <td>
                                 <span class="post__title"><%= question.title %></span></td>
                             <td>
-                                <span class="post__userId"><%= question.userId %></span></td>
+                                <span class="post__userName"><%= question.userName %></span></td>
                             <td>
                                 <span class="post__views"><%= question.views %></span></td>
                             <td>
